# gemini-assistant

./: .env.example  README.md  check_capabilities.py  check_models.py  debug_gemini.py  debug_search.py  list_models.py  pyproject.toml  requirements.txt  test_auto_search.py  test_vision.py
src/: __init__.py  assistant.py  main.py  memory.py  utils.py  voice.py
